Cart Code behind done

--- a/ShoppingCartNew/ShoppingCartNew.csproj
+++ b/ShoppingCartNew/ShoppingCartNew.csproj
@@ -173,6 +173,10 @@
     <Compile Include="Migrations\201508250421371_InitialCreate.Designer.cs">
       <DependentUpon>201508250421371_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508260628466_InitialCreate1.cs" />
+    <Compile Include="Migrations\201508260628466_InitialCreate1.Designer.cs">
+      <DependentUpon>201508260628466_InitialCreate1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CartItem.cs" />
@@ -274,6 +278,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201508250421371_InitialCreate.resx">
       <DependentUpon>201508250421371_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508260628466_InitialCreate1.resx">
+      <DependentUpon>201508260628466_InitialCreate1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
