--- a/ShoppingCartNew/ShoppingCartNew.csproj
+++ b/ShoppingCartNew/ShoppingCartNew.csproj
@@ -177,6 +177,10 @@
     <Compile Include="Migrations\201508260628466_InitialCreate1.Designer.cs">
       <DependentUpon>201508260628466_InitialCreate1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508260950279_InitialCreate2.cs" />
+    <Compile Include="Migrations\201508260950279_InitialCreate2.Designer.cs">
+      <DependentUpon>201508260950279_InitialCreate2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CartItem.cs" />
@@ -189,6 +193,8 @@
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ShoppingCartRemoveViewModel.cs" />
+    <Compile Include="ViewModels\ShoppingCartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508260628466_InitialCreate1.resx">
       <DependentUpon>201508260628466_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508260950279_InitialCreate2.resx">
+      <DependentUpon>201508260950279_InitialCreate2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
